--- a/exercises/KEGG_Pathways.Rmd
+++ b/exercises/KEGG_Pathways.Rmd
@@ -118,7 +118,7 @@ Of course, you might want more control over the process. In that case, we can us
 ```{r}
 # turn res object into a list of genes
 DE_genes <- res %>% data.frame() %>%
-  filter(PValue < 0.01 #& abs(logFC)>1
+  filter(PValue < 0.01 & abs(logFC)>0.5
          ) %>%
   pull(ORF)
 ```
@@ -147,17 +147,105 @@ data.frame(kegg_results) %>% View()
 # Remove " - Saccharomyces cerevesiae" from each description entry
 kegg_results@result$Description <- kegg_results@result$Description %>% print() %>% str_replace_all(., fixed(" - Saccharomyces cerevisiae"), "")
 ```
+The first way we might want to visualize this plot is part of a KEGG pathway. We can open an html window with genes that are enriched highlighted, like this:
+```{r}
+browseKEGG(kegg_results, 'sce00500')
+browseKEGG(kegg_results, 'sce04213')
+```
+
 
 clusterProfiler also let's us visualize these results
-```{r}
+```{r fig.height=8, fig.width=8}
 # Plot the KEGG pathway enrichment results
 dotplot(kegg_results, showCategory = 10)
 
+fold_change_geneList <- setNames(object = data.frame(res)$logFC,nm = data.frame(res)$ORF)
+head(fold_change_geneList)
+
 # cnetplot
-cnetplot(kegg_results, categorySize="pvalue", foldChange=res %>% data.frame() %>%
-  filter(PValue < 0.01 #& abs(logFC)>1
-         ) %>% pull(logFC))
+cnetplot(kegg_results,  
+         showCategory=10,
+         node_label="category",
+         color.params=list(foldChange = fold_change_geneList),
+         cex.params=list(gene_label = 0.1,
+                         category_label=0.5), 
+         max.overlaps=100) +
+  # change the color scale
+  scale_colour_gradientn(colours = RColorBrewer::brewer.pal(n = 10, name = "RdYlBu"), limits=c(-6, 6)) +
+  labs(colour="logFC")
+
+# circulate cnetplot
+cnetplot(kegg_results,  
+         showCategory=6,
+         circular=TRUE, # this changes the output graphing
+         node_label="category",
+         color.params=list(foldChange = fold_change_geneList),
+         cex.params=list(gene_label = 0.5,
+                         category_label=0.5), 
+         max.overlaps=100) +
+  # change the color scale
+  scale_colour_gradientn(colours = RColorBrewer::brewer.pal(n = 10, name = "RdYlBu"), limits=c(-6, 6)) +
+  labs(colour="logFC")
+
+# heatplot
+heatplot(kegg_results, showCategory=18, foldChange = fold_change_geneList)
+
+
 ```
+
+emapplot
+```{r}
+x2 = enrichplot::pairwise_termsim(kegg_results)
+emapplot(x2, showCategory = 30,cex_label_category = 0.4,)
+```
+
+
+## KEGG pathway gene set enrichment analysis
+
+```{r}
+# For gseKEGG, we need a gene list with na removed and sorted. let's do that now.
+# omit any NA values 
+kegg_gene_list = na.omit(fold_change_geneList)
+
+# sort the list in decreasing order (required for clusterProfiler)
+kegg_gene_list = sort(kegg_gene_list, decreasing = TRUE)
+
+gse_kegg <- gseKEGG(geneList     = kegg_gene_list,
+               organism     = 'sce',
+               # minGSSize    = 120,
+               pvalueCutoff = 0.05,
+               verbose      = FALSE)
+head(gse_kegg)
+
+View(data.frame(gse_kegg))
+
+
+# replace gse_kegg too long of names
+gse_kegg@result$Description <- gse_kegg@result$Description %>% str_replace_all(., fixed(" - Saccharomyces cerevisiae"), "")
+```
+visualize those results
+```{r fig.height=6}
+dotplot(gse_kegg, showCategory = 3, title = "Enriched Pathways" , split=".sign") + facet_grid(.~.sign)
+
+
+# Visualize the ranking of the genes by set
+gseaplot(gse_kegg, geneSetID = 1, by = "preranked", title = gse_kegg$Description[1])
+gseaplot(gse_kegg, geneSetID = 2, by = "preranked", title = gse_kegg$Description[2])
+gseaplot(gse_kegg, geneSetID = 3, by = "preranked", title = gse_kegg$Description[3])
+gseaplot(gse_kegg, geneSetID = 4, by = "preranked", title = gse_kegg$Description[4])
+```
+
+```{r fig.height=6, fig.width=8, dpi=300}
+# take a closer look at the RNA polymerase genes
+gseaplot(gse_kegg, geneSetID = 4, title = gse_kegg$Description[4])
+
+# what if we want to look at multiple together?
+enrichplot::gseaplot2(gse_kegg, geneSetID = 1:3, pvalue_table = TRUE,
+          color = c("#E495A5", "#86B875", "#7DB0DD"), ES_geom = "dot")
+```
+
+
+
 
 Be sure to knit this file into a pdf or html file once you're finished.
 
